--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="img">
-        <div class="img-box">
+        <div class="img-box" id="drop-area">
           <img id="img" />
         </div>
         <div class="upload">
@@ -40,17 +40,9 @@
             <label for="grayscale">Grayscale</label>
             <input type="range" id="grayscale" min="0" step="0.1" max="1" value="0" />
           </li>
-          
           <li>
             <label for="blur">Blur</label>
-            <input
-              type="range"
-              id="blur"
-              step="0.1"
-              min="0"
-              max="10"
-              value="0"
-            />
+            <input type="range" id="blur" step="0.1" min="0" max="10" value="0" />
           </li>
           <li>
             <label for="hue-rotate">Hue Rotate</label>
@@ -58,7 +50,8 @@
           </li>
           <li>
             <a download="true" id="download">Download</a>
-            <span onclick="restValue()">Reset</span>
+            <button id="reset">Reset</button>
+            <button id="undo">Undo</button>
           </li>
         </ul>
       </div>
